Fix for blurry svg on Safari
close #7

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -284,7 +284,7 @@ strong
         }
         .didyouknow
         {
-            width: 45.2%;
+            width: 46.171%;
             min-width: 280px;
             height: auto;
             position: absolute;
